--- a/index.html
+++ b/index.html
@@ -84,13 +84,17 @@
       <h2>我的项目</h2>
       <ul>
         <li>
-          <a href="/demoTest" target="_blank">🧪 DemoTest 项目</a>
+          <a href="/demoTest">🧪 DemoTest 项目</a>
           <p>一个用于测试和演示功能的前端项目。</p>
         </li>
         <li>
           <a href="/hwwsss" target="_blank">🚀 HWWSSS 项目</a>
           <p>另一个我正在开发的有趣项目，欢迎体验！</p>
         </li>
+<!--         <li>
+          <a href="/hwwsss" target="_blank">🚀 HWWSSS 项目</a>
+          <p>另一个我正在开发的有趣项目，欢迎体验！</p>
+        </li> -->
       </ul>
     </section>
   </main>
