--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
           <p>一个用于测试和演示功能的前端项目。</p>
         </li>
         <li>
-          <a href="/hwwsss" target="_blank">🚀 HWWSSS 项目</a>
+          <a href="/hwwsss">🚀 HWWSSS 项目</a>
           <p>另一个我正在开发的有趣项目，欢迎体验！</p>
         </li>
-<!--         <li>
-          <a href="/hwwsss" target="_blank">🚀 HWWSSS 项目</a>
-          <p>另一个我正在开发的有趣项目，欢迎体验！</p>
-        </li> -->
+        <li>
+          <a href="/hwwsss">💎 STAR 项目</a>
+          <p>你猜！</p>
+        </li>
       </ul>
     </section>
   </main>
